--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 .quiz {
-    max-width: 850px;
+    max-width: 75%;
     padding: 10px;
 }
 
@@ -85,7 +85,21 @@ h1 {
     
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 500px) {
+
+    h1 {
+        font-size: 20px;
+    }
+
+    #question {
+        font-weight: 600;
+        font-size: 14px;
+        margin: 10px 0;
+    }
+
+    .quiz-div {
+        font-size: 12px;
+    }
 
     #logo {
         max-width: 280px;
@@ -97,6 +111,7 @@ h1 {
     }
 
     .quiz {
-        max-width: 90%;
+        max-width: 100%;
+        padding: 5px;
     }
 }
